# sdfmetz

./: AUTHORS  Background.md  Experiments.md  Features.md  Implementation.md  ProjectHome.md  README  TODO
SdfMetz-v1.1/: .Makefile.swp  Makefile  README  SdfMetz.hs
SdfMetz-v1.1/Data/: Bag.hs  Metrics.hs  SetExtras.hs
SdfMetz-v1.1/Data/Relation/: GraphViz.hs  SetOfPairs.hs
SdfMetz-v1.1/Language/DmsGrammar/: ATermInstances.hs  DmsGrammar2Sdf.hs  OrdInstances.hs  Pretty.hs  ShowInstances.hs  TermInstances.hs  dms-syntax.def
SdfMetz-v1.1/Language/Sdf/: FlowGraph.hs  FlowGraphHUnit.hs  Metrics.hs  ReadInstances.hs  Sdf.tbl  SdfLib.hs  SdfLibHUnit.hs  Syntax.hs  TermInstances.hs
SdfMetz-v1.1/Pointless/: Combinators.hs
SdfMetz-v1.1/contrib/HUnit-1.0/: Guide.html  HUnitBase.lhs  HUnitTest98.lhs  HUnitTestBase.lhs  HUnitText.lhs
SdfMetz-v1.1/contrib/StrategyLib-4.0-beta/: ChangeLog  INSTALL  (+3 more)
contrib/HUnit-1.0/: Example.hs  HUnit.lhs  HUnitLang.lhs  HUnitLang98.lhs  HUnitLangExc.lhs  HUnitTestExc.lhs
docs/: SdfMetz-TS.tex
sdf2-bundle-2.0.1/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.in  sdf2-bundle.spec
sdf2-bundle-2.0.1/asc-support/: ChangeLog  Makefile.in  README  aclocal.m4  asc-support-1.8.pkg  configure  configure.in
sdf2-bundle-2.0.1/asc-support/lib/: Makefile.am  Makefile.in  asc-builtins.h  asc-muasf2pt.c  asc-muasf2pt.h  asc-nametable.c  asc-support.c  asc-traversals.h  builtin-forward.c  builtin-link-test.c
sdf2-bundle-2.0.1/asc-support/lib/tb/: Makefile.am  Makefile.in  tb-asc-main.c
sdf2-bundle-2.0.1/asc-support/utils/: Makefile.in  gen-forward.sh  gen-link-test.sh  gen-protos.sh
sdf2-bundle-2.0.1/asf-support/: Makefile.am  Makefile.in  README  aclocal.m4  asf-support-1.2.pkg  configure  configure.in  program-check.m4
sdf2-bundle-2.0.1/asf-support/lib/: Makefile.am  Makefile.in
sdf2-bundle-2.0.1/asf-support/utils/: Makefile.in
sdf2-bundle-2.0.1/pgen/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.in  make_rules  pgen-2.0.pkg  program-check.m4
sdf2-bundle-2.0.1/pgen/grammar/: Makefile.in
sdf2-bundle-2.0.1/pgen/sdf-checker/: Makefile.am  Makefile.in
sdf2-bundle-2.0.1/pgen/sdf-checker/spec/: Makefile.am  Makefile.in
sdf2-bundle-2.0.1/pgen/sdf-checker/src/: Makefile.am  Makefile.in  sdfchecker.idef
sdf2-bundle-2.0.1/pgen/sdf2stats/: Makefile.am  Makefile.in
sdf2-bundle-2.0.1/pgen/src/: Makefile.am  Makefile.in  parsetablegen.idef  sdf2table.1  sdf2table.src
sdf2-bundle-2.0.1/pgen/test/: Makefile.am  Makefile.in  regress-lang.sh.src
sdf2-bundle-2.0.1/pgen/test/grammars/: Flat.sdf  Makefile.am  Makefile.in
sdf2-bundle-2.0.1/pgen/test/tables/: Makefile.am  Makefile.in
sdf2-bundle-2.0.1/pt-support/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.in  pt-support-1.0.pkg
sdf2-bundle-2.0.1/pt-support/libasfix2/: Makefile.am  Makefile.in  asfix2.c  asfix2.h
sdf2-bundle-2.0.1/pt-support/libconversion/: Makefile.am  Makefile.in  conversion.h  flattenPT.c
sdf2-bundle-2.0.1/pt-support/libmept/: MEPT-utils.c  MEPT-utils.h  Makefile.am  Makefile.in  implodePT.c
sdf2-bundle-2.0.1/pt-support/libptmept/: Makefile.am  Makefile.in
sdf2-bundle-2.0.1/pt-support/test/: Makefile.am  Makefile.in  mept-test.c
sdf2-bundle-2.0.1/pt-support/test/terms/: Makefile.in  terms_dict.c  terms_dict.h
sdf2-bundle-2.0.1/pt-support/utils/: Makefile.am  Makefile.in  ambtracker-main.c  apply-function.c  flattenPT-main.c  liftPT-main.c  position-annotator.idef  unparseProd-main.c  unparser.idef
sdf2-bundle-2.0.1/pt-support/utils/implodePT/: Makefile.am  Makefile.in  implodePT-main.c
sdf2-bundle-2.0.1/pt-support/utils/implodePT/test/: Makefile.am  Makefile.in
sdf2-bundle-2.0.1/pt-support/utils/implodePT/test/grammar/: Makefile.in
sdf2-bundle-2.0.1/pt-support/utils/implodePT/test/in/: Makefile.in
sdf2-bundle-2.0.1/pt-support/utils/implodePT/test/terms/: Makefile.in
sdf2-bundle-2.0.1/sdf-support/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.in  make_rules  sdf-support-2.0.pkg
sdf2-bundle-2.0.1/sdf-support/lib/: Makefile.am  Makefile.in  pt2sdf.c
sdf2-bundle-2.0.1/sdf-support/test/: Makefile.am  Makefile.in  pt2sdf-test.c
sdf2-bundle-2.0.1/sdf-support/utils/: Makefile.in
sdf2-bundle-2.0.1/sdf-support/utils/sdf-modules/: Makefile.in
sdf2-bundle-2.0.1/sdf-support/utils/sdf-modules/src/: Makefile.am  Makefile.in  sdf-modules.c
sdf2-bundle-2.0.1/sdf-support/utils/sdf-renaming/: Makefile.am  Makefile.in
sdf2-bundle-2.0.1/sdf-support/utils/sdf-renaming/src/: Makefile.am  Makefile.in  sdf-renaming.c
sdf2-bundle-2.0.1/sglr/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.in  make_rules  program-check.m4  sglr-3.10.2.pkg
sdf2-bundle-2.0.1/sglr/doc/: Makefile.am  Makefile.in  sglr-api.3  sglr.1
sdf2-bundle-2.0.1/sglr/dump/: Makefile.am  Makefile.in  dump-actions.c  dump-gotos.c  dump-priorities.c  dump-productions.c  dump-skel.c  dump-skel.h
sdf2-bundle-2.0.1/sglr/libsglr/: Makefile.am  Makefile.in  forest.c  forest.h  parse-table.c  parse-table.h  parser.c  parser.h  sglr-interface.c  sglr.h
sdf2-bundle-2.0.1/sglr/restorebrackets/: Makefile.am  Makefile.in
sdf2-bundle-2.0.1/sglr/restorebrackets/src/: Makefile.am  Makefile.in  restorebrackets.idef
sdf2-bundle-2.0.1/sglr/sglr/: Makefile.am  Makefile.in  sglr-main.c  sglr.idef
sdf2-bundle-2.0.1/sglr/test/: Makefile.am  Makefile.in  regress-terms.sh.src
sdf2-bundle-2.0.1/sglr/test/erroneous/: Makefile.am  Makefile.in
sdf2-bundle-2.0.1/sglr/test/tables/: Makefile.am  Makefile.in
sdf2-bundle-2.0.1/sglr/test/terms/: Makefile.am  Makefile.in
sdf2-bundle-2.0.1/toolbuslib/: ChangeLog  Makefile.in  aclocal.m4  configure  program-check.m4  toolbuslib-0.5.1.pkg
sdf2-bundle-2.0.1/toolbuslib/aterm/: Makefile.am  Makefile.in  atb-tool.c
sdf2-bundle-2.0.1/toolbuslib/libtb/: Makefile.in
src/: SdfMetz.hs
trunk/docs/: SdfMetz-TS.tex
trunk/src/: Makefile
wiki/: Background.wiki  Experiments.wiki  Features.wiki  Implementation.wiki
(+193 files in other folders)
